# wellcome-trust-api

./: .gitignore  Cargo.toml  README.md
python/: app.py
rust/: README.md
rust/src/: config.rs  endpoint.rs  main.rs
rust/src/endpoint/: sumulative_report.rs
src/: config.rs  endpoint.rs  main.rs
src/endpoint/: sumulative_report.rs
