[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
awc = { version = "3", features = ["rustls"] }

env_logger = "0.9"
log = "0.4"
mime = "0.3"
rustls = "0.20"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.89"
webpki-roots = "0.22"
